[gd_scene load_steps=5 format=2]

[ext_resource path="res://Graphics/Lamp_1.png" type="Texture" id=1]
[ext_resource path="res://Graphics/Light/01-LightTextureNormal.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Objects/Lamps/Lamp1.gd" type="Script" id=3]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( -1.57483, -17.9461, -2.98904, 20.9448, -7.9388, 22.359, -13.5957, 32.9657, -12.8885, 40.0367, -4.40326, 44.2794, 4.78914, 44.2794, 10.446, 39.3296, 11.8602, 33.6728, 6.20335, 22.359, 1.2536, 20.2377 )

[node name="Lamp1" type="Sprite" groups=[
"minimap_objects",
]]
script = ExtResource( 3 )

[node name="Lamp_1" type="Sprite" parent="."]
position = Vector2( 0, -36.0673 )
texture = ExtResource( 1 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Lamp_1"]
occluder = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="Lamp_1"]
position = Vector2( 0, -39.7071 )
texture = ExtResource( 2 )
shadow_enabled = true

[node name="Area2D" type="Area2D" parent="Lamp_1"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Lamp_1/Area2D"]
polygon = PoolVector2Array( -9.35301, -50.473, -16.4241, -41.2806, -11.4743, -23.603, -3.69615, -20.0674, -2.98904, 20.9448, -8.6459, 23.0661, -13.5957, 32.9657, -12.1814, 40.7438, -3.69615, 44.9865, 5.49625, 43.5723, 12.5673, 36.5012, 6.20335, 22.359, 1.2536, 19.5306, 1.2536, -20.0674, 8.32468, -22.1887, 12.5673, -39.8664, 9.73889, -47.6446, 2.66782, -46.9375, 1.2536, -40.5735, 2.66782, -29.9669, -5.11037, -29.9669, -4.40326, -42.6949 )
[connection signal="body_entered" from="Lamp_1/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Lamp_1/Area2D" to="." method="_on_Area2D_body_exited"]
